--- a/styles.css
+++ b/styles.css
@@ -16,16 +16,16 @@ header h1 {
 }
 .currentScore {
   font-size: 20px;
-  color: blue;
-  position: absolute;
-  top: 20;
+  color: rgba(17, 154, 233, 0.925);
+  position: fixed;
+  top: 60;
   right: 100;
   height: 100px;
   width: 100px;
   text-align: center;
 }
 #high {
-  top: 100;
+  top: 150;
 }
 #displayScore {
   font-size: 40px;
@@ -84,4 +84,72 @@ button {
 button:hover {
   opacity: 1;
   cursor: pointer;
+}
+
+.scoresPage {
+  /* background: red; */
+  min-height: 200px;
+  max-height: auto;
+  position: relative;
+  z-index: 0;
+  padding: 30px 50px;
+}
+
+.scoreTab {
+  /* background: green; */
+  height: 100px;
+  max-width: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  position: relative;
+  z-index: 1;
+  top: 0;
+  margin: 30px auto;
+  border: solid 1px rgba(17, 154, 233, 0.938);
+  border-radius: 5px;
+  transition: border 2s, box-shadow 2s, max-width 0.5s;
+}
+.scoreTab:hover {
+  max-width: 700px;
+  border: solid 2px rgba(17, 154, 233, 0.7);
+  box-shadow: 1px 1px 5px rgba(17, 154, 233, 0.7);
+}
+.score_id {
+  /* background: blue; */
+  min-height: 90%;
+  max-width: 350px;
+  margin: 5px;
+  text-align: center;
+  line-height: 90px;
+  overflow-wrap: break-word;
+  color: rgba(17, 154, 233, 0.7);
+  font-size: 12px;
+  transition: color 2s;
+  padding: 0px 10px;
+}
+.score_id:hover {
+  color: rgba(17, 154, 233, 1);
+}
+
+.score {
+  /* background: yellow; */
+  min-height: 90%;
+  min-width: 350px;
+  text-align: center;
+  margin: 5px 10px;
+  font-size: 60px;
+  line-height: 90px;
+  color: rgb(17, 154, 233);
+}
+
+.Next {
+  background: rgb(17, 154, 233);
+  border-radius: 5px;
+  border: none !important;
+  max-width: 200px;
+  max-height: 50px;
+  position: fixed;
+  left: 200px;
+  top: 100px;
 }
