--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,24 @@
 body {
-  background: #eee;
+  background: rgb(50, 9, 97);
+  --theme-color: #288bb3;
 }
 
 header {
   width: 700px;
   margin: 0 auto;
-  border: 1px solid #288bb3;
+  border: 1px solid #fff;
   padding: 15px;
   box-shadow: 1px 1px 5px black;
 }
 header h1 {
   margin: 0 auto;
-  width: 210px;
-  color: #2859b3;
+  width: 240px;
+  color: #fff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .currentScore {
   font-size: 20px;
-  color: rgba(17, 154, 233, 0.925);
+  color: #fff;
   position: fixed;
   top: 60;
   right: 100;
@@ -44,18 +46,21 @@ header h1 {
   margin: 0 auto;
 }
 .card {
-  border: 1px solid #288bb3;
+  border: 1px solid #fff;
   margin-bottom: 15px !important;
-  padding: 15px;
+  padding: 15px 0px;
   width: 500px;
-  margin: 0 auto;
+  margin: 40px auto;
+  color: white;
+  font-family: sans-serif;
   transition: width 1s, box-shadow 1s;
-}
-
-.card:hover {
-  width: 700px;
   box-shadow: 1px 1px 5px black;
 }
+
+/* .card:hover {
+  width: 550px;
+  box-shadow: 1px 1px 5px black;
+} */
 .card-title {
   margin: 0 auto;
   width: 400px;
@@ -64,11 +69,11 @@ header h1 {
 .button-container {
   margin: 0 auto;
   width: 500px;
-  padding: 15px;
+  position: relative;
+  top: 0px;
   transition: width 1s;
 }
 .button-container:hover {
-  width: 700px;
   cursor: pointer;
 }
 button {
@@ -77,13 +82,17 @@ button {
   color: white;
   background: #288bb3;
   border: none;
-  height: 100px;
+  height: 70px;
   border-radius: 5px;
   opacity: 0.8;
 }
 button:hover {
   opacity: 1;
   cursor: pointer;
+  box-shadow: 1px 1px 5px black;
+}
+button:focus {
+  outline: none !important;
 }
 
 .scoresPage {
@@ -147,9 +156,38 @@ button:hover {
   background: rgb(17, 154, 233);
   border-radius: 5px;
   border: none !important;
-  max-width: 200px;
+  max-width: 150px;
   max-height: 50px;
   position: fixed;
   left: 100px;
   top: 100px;
+}
+
+form {
+  border: solid 1px #fff;
+  width: 580px;
+  height: 360px;
+  border-radius: 5px;
+  margin: 0 auto;
+  padding: 20px 10px;
+  box-shadow: 1px 1px 5px black;
+}
+
+.nextQuestion {
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  padding: 0;
+  margin: 5px 0px 10px 0px;
+  position: relative;
+  left: 490px;
+}
+.prevQuestion {
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  padding: 0;
+  margin: 5px 0px 10px 0px;
+  position: relative;
+  left: 380px;
 }
