--- a/styles.css
+++ b/styles.css
@@ -36,10 +36,24 @@ header h1 {
   font-size: 40px;
 }
 
-.Questions-container {
+.questions-container {
   margin-top: 30px;
 }
-
+#enter-questionPage {
+  display: none;
+  margin-top: 30px;
+}
+#question-box {
+  width: 540px;
+  height: 150px;
+  margin: 20px;
+  padding: 20px;
+}
+#submitQuestion {
+  width: 540px;
+  height: 50px;
+  margin: 20px;
+}
 .options ul {
   list-style: none;
   width: 220px;
@@ -161,6 +175,16 @@ button:focus {
   position: fixed;
   left: 100px;
   top: 100px;
+}
+.enter-question {
+  background: rgb(17, 154, 233);
+  border-radius: 5px;
+  border: none !important;
+  max-width: 150px;
+  max-height: 50px;
+  position: fixed;
+  left: 100px;
+  top: 200px;
 }
 
 form {
